[style] Entity portal filters section z-index problem fix

--- a/src/components/common/dropdown/_style.scss
+++ b/src/components/common/dropdown/_style.scss
@@ -7,7 +7,7 @@ div.common-cmp--dropdown__container {
   div.dropdown-container {
     position: absolute;
     left: 0;
-    z-index: 5;
+    z-index: 15;
 
     border-radius: $border-radius-regular-rem;
     background-color: $clr-white-regular;
