--- a/src/components/entities/portal/filterby-builder/dynamic-filterby/text-filter/_styles.scss
+++ b/src/components/entities/portal/filterby-builder/dynamic-filterby/text-filter/_styles.scss
@@ -12,9 +12,6 @@ div.entities-portal--text-filter__container {
     align-items: center;
     gap: $space-inline-xxxSmall-rem;
 
-    position: relative;
-    z-index: 10;
-
     width: 100%;
 
     input {
